parser/team14/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    add
    alter
    between
    boolean
    character
    check
    column
    constraint
    databases
    day
    default
    dospuntos
    double
    drop
    enum
    exist
    foreign
    hour
    if
    ilike
    in
    inherits
    insert
    interval
    into
    isnull
    key
    like
    llavea
    llavec
    minute
    mode
    money
    month
    notnull
    null
    owner
    precision
    primary
    r_bigint
    r_char
    r_date
    r_decimal
    r_integer
    r_numeric
    r_real
    r_smallint
    r_time
    r_timestamp
    references
    rename
    replace
    second
    set
    show
    simboloor
    similar
    symetric
    table
    to
    type
    unique
    unknown
    update
    values
    varyng
    without
    year
    zone

Grammar

Rule 0     S' -> init
Rule 1     init -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> OPLOGICA
Rule 5     instruccion -> SELECT
Rule 6     SELECT -> select distinct LSELECT r_from LFROM WHERE GROUP HAVING
Rule 7     SELECT -> select LSELECT r_from LFROM WHERE GROUP HAVING
Rule 8     LSELECT -> LEXP
Rule 9     LSELECT -> multiplicacion
Rule 10    LFROM -> LEXP
Rule 11    LFROM -> para SELECT parc
Rule 12    WHERE -> where EXP
Rule 13    WHERE -> <empty>
Rule 14    GROUP -> group by EXP
Rule 15    GROUP -> <empty>
Rule 16    HAVING -> having EXP
Rule 17    HAVING -> ptcoma
Rule 18    OPLOGICA -> not RELACIONAL
Rule 19    OPLOGICA -> OPLOGICA and RELACIONAL
Rule 20    OPLOGICA -> OPLOGICA or RELACIONAL
Rule 21    RELACIONAL -> RELACIONAL mayor EXP
Rule 22    RELACIONAL -> RELACIONAL menor EXP
Rule 23    RELACIONAL -> RELACIONAL mayor_igual EXP
Rule 24    RELACIONAL -> RELACIONAL menor_igual EXP
Rule 25    RELACIONAL -> RELACIONAL igual EXP
Rule 26    RELACIONAL -> RELACIONAL diferente1 EXP
Rule 27    RELACIONAL -> RELACIONAL diferente2 EXP
Rule 28    RELACIONAL -> EXP
Rule 29    LEXP -> LEXP coma EXP
Rule 30    LEXP -> EXP
Rule 31    EXP -> EXP mas EXP1
Rule 32    EXP -> EXP menos EXP1
Rule 33    EXP -> EXP multiplicacion EXP1
Rule 34    EXP -> EXP division EXP1
Rule 35    EXP -> EXP1
Rule 36    EXP1 -> EXP1 modulo EXP2
Rule 37    EXP1 -> EXP1 elevado EXP2
Rule 38    EXP1 -> EXP2
Rule 39    EXP2 -> para EXP parac
Rule 40    EXP2 -> UNARIO EXP
Rule 41    EXP2 -> int
Rule 42    EXP2 -> decimal
Rule 43    EXP2 -> varchar
Rule 44    EXP2 -> char
Rule 45    EXP2 -> true
Rule 46    EXP2 -> false
Rule 47    EXP2 -> id
Rule 48    EXP2 -> id punto EXP
Rule 49    UNARIO -> mas
Rule 50    UNARIO -> menos

Terminals, with rules where they appear

add                  : 
alter                : 
and                  : 19
between              : 
boolean              : 
by                   : 14
char                 : 44
character            : 
check                : 
column               : 
coma                 : 29
constraint           : 
databases            : 
day                  : 
decimal              : 42
default              : 
diferente1           : 26
diferente2           : 27
distinct             : 6
division             : 34
dospuntos            : 
double               : 
drop                 : 
elevado              : 37
enum                 : 
error                : 
exist                : 
false                : 46
foreign              : 
group                : 14
having               : 16
hour                 : 
id                   : 47 48
if                   : 
igual                : 25
ilike                : 
in                   : 
inherits             : 
insert               : 
int                  : 41
interval             : 
into                 : 
isnull               : 
key                  : 
like                 : 
llavea               : 
llavec               : 
mas                  : 31 49
mayor                : 21
mayor_igual          : 23
menor                : 22
menor_igual          : 24
menos                : 32 50
minute               : 
mode                 : 
modulo               : 36
money                : 
month                : 
multiplicacion       : 9 33
not                  : 18
notnull              : 
null                 : 
or                   : 20
owner                : 
para                 : 11 39
parac                : 39
parc                 : 11
precision            : 
primary              : 
ptcoma               : 17
punto                : 48
r_bigint             : 
r_char               : 
r_date               : 
r_decimal            : 
r_from               : 6 7
r_integer            : 
r_numeric            : 
r_real               : 
r_smallint           : 
r_time               : 
r_timestamp          : 
references           : 
rename               : 
replace              : 
second               : 
select               : 6 7
set                  : 
show                 : 
simboloor            : 
similar              : 
symetric             : 
table                : 
to                   : 
true                 : 45
type                 : 
unique               : 
unknown              : 
update               : 
values               : 
varchar              : 43
varyng               : 
where                : 12
without              : 
year                 : 
zone                 : 

Nonterminals, with rules where they appear

EXP                  : 12 14 16 21 22 23 24 25 26 27 28 29 30 31 32 33 34 39 40 48
EXP1                 : 31 32 33 34 35 36 37
EXP2                 : 36 37 38
GROUP                : 6 7
HAVING               : 6 7
LEXP                 : 8 10 29
LFROM                : 6 7
LSELECT              : 6 7
OPLOGICA             : 4 19 20
RELACIONAL           : 18 19 20 21 22 23 24 25 26 27
SELECT               : 5 11
UNARIO               : 40
WHERE                : 6 7
init                 : 0
instruccion          : 2 3
instrucciones        : 1 2

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . OPLOGICA
    (5) instruccion -> . SELECT
    (18) OPLOGICA -> . not RELACIONAL
    (19) OPLOGICA -> . OPLOGICA and RELACIONAL
    (20) OPLOGICA -> . OPLOGICA or RELACIONAL
    (6) SELECT -> . select distinct LSELECT r_from LFROM WHERE GROUP HAVING
    (7) SELECT -> . select LSELECT r_from LFROM WHERE GROUP HAVING

    not             shift and go to state 6
    select          shift and go to state 7

    init                           shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    OPLOGICA                       shift and go to state 4
    SELECT                         shift and go to state 5

state 1

    (0) S' -> init .



state 2

    (1) init -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . OPLOGICA
    (5) instruccion -> . SELECT
    (18) OPLOGICA -> . not RELACIONAL
    (19) OPLOGICA -> . OPLOGICA and RELACIONAL
    (20) OPLOGICA -> . OPLOGICA or RELACIONAL
    (6) SELECT -> . select distinct LSELECT r_from LFROM WHERE GROUP HAVING
    (7) SELECT -> . select LSELECT r_from LFROM WHERE GROUP HAVING

    $end            reduce using rule 1 (init -> instrucciones .)
    not             shift and go to state 6
    select          shift and go to state 7

    instruccion                    shift and go to state 8
    OPLOGICA                       shift and go to state 4
    SELECT                         shift and go to state 5

state 3

    (3) instrucciones -> instruccion .

    not             reduce using rule 3 (instrucciones -> instruccion .)
    select          reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instruccion -> OPLOGICA .
    (19) OPLOGICA -> OPLOGICA . and RELACIONAL
    (20) OPLOGICA -> OPLOGICA . or RELACIONAL

    not             reduce using rule 4 (instruccion -> OPLOGICA .)
    select          reduce using rule 4 (instruccion -> OPLOGICA .)
    $end            reduce using rule 4 (instruccion -> OPLOGICA .)
    and             shift and go to state 9
    or              shift and go to state 10


state 5

    (5) instruccion -> SELECT .

    not             reduce using rule 5 (instruccion -> SELECT .)
    select          reduce using rule 5 (instruccion -> SELECT .)
    $end            reduce using rule 5 (instruccion -> SELECT .)


state 6

    (18) OPLOGICA -> not . RELACIONAL
    (21) RELACIONAL -> . RELACIONAL mayor EXP
    (22) RELACIONAL -> . RELACIONAL menor EXP
    (23) RELACIONAL -> . RELACIONAL mayor_igual EXP
    (24) RELACIONAL -> . RELACIONAL menor_igual EXP
    (25) RELACIONAL -> . RELACIONAL igual EXP
    (26) RELACIONAL -> . RELACIONAL diferente1 EXP
    (27) RELACIONAL -> . RELACIONAL diferente2 EXP
    (28) RELACIONAL -> . EXP
    (31) EXP -> . EXP mas EXP1
    (32) EXP -> . EXP menos EXP1
    (33) EXP -> . EXP multiplicacion EXP1
    (34) EXP -> . EXP division EXP1
    (35) EXP -> . EXP1
    (36) EXP1 -> . EXP1 modulo EXP2
    (37) EXP1 -> . EXP1 elevado EXP2
    (38) EXP1 -> . EXP2
    (39) EXP2 -> . para EXP parac
    (40) EXP2 -> . UNARIO EXP
    (41) EXP2 -> . int
    (42) EXP2 -> . decimal
    (43) EXP2 -> . varchar
    (44) EXP2 -> . char
    (45) EXP2 -> . true
    (46) EXP2 -> . false
    (47) EXP2 -> . id
    (48) EXP2 -> . id punto EXP
    (49) UNARIO -> . mas
    (50) UNARIO -> . menos

    para            shift and go to state 17
    int             shift and go to state 19
    decimal         shift and go to state 20
    varchar         shift and go to state 21
    char            shift and go to state 22
    true            shift and go to state 23
    false           shift and go to state 24
    id              shift and go to state 25
    mas             shift and go to state 13
    menos           shift and go to state 15

    RELACIONAL                     shift and go to state 11
    EXP                            shift and go to state 12
    EXP1                           shift and go to state 14
    EXP2                           shift and go to state 16
    UNARIO                         shift and go to state 18

state 7

    (6) SELECT -> select . distinct LSELECT r_from LFROM WHERE GROUP HAVING
    (7) SELECT -> select . LSELECT r_from LFROM WHERE GROUP HAVING
    (8) LSELECT -> . LEXP
    (9) LSELECT -> . multiplicacion
    (29) LEXP -> . LEXP coma EXP
    (30) LEXP -> . EXP
    (31) EXP -> . EXP mas EXP1
    (32) EXP -> . EXP menos EXP1
    (33) EXP -> . EXP multiplicacion EXP1
    (34) EXP -> . EXP division EXP1
    (35) EXP -> . EXP1
    (36) EXP1 -> . EXP1 modulo EXP2
    (37) EXP1 -> . EXP1 elevado EXP2
    (38) EXP1 -> . EXP2
    (39) EXP2 -> . para EXP parac
    (40) EXP2 -> . UNARIO EXP
    (41) EXP2 -> . int
    (42) EXP2 -> . decimal
    (43) EXP2 -> . varchar
    (44) EXP2 -> . char
    (45) EXP2 -> . true
    (46) EXP2 -> . false
    (47) EXP2 -> . id
    (48) EXP2 -> . id punto EXP
    (49) UNARIO -> . mas
    (50) UNARIO -> . menos

    distinct        shift and go to state 26
    multiplicacion  shift and go to state 29
    para            shift and go to state 17
    int             shift and go to state 19
    decimal         shift and go to state 20
    varchar         shift and go to state 21
    char            shift and go to state 22
    true            shift and go to state 23
    false           shift and go to state 24
    id              shift and go to state 25
    mas             shift and go to state 13
    menos           shift and go to state 15

    LSELECT                        shift and go to state 27
    LEXP                           shift and go to state 28
    EXP                            shift and go to state 30
    EXP1                           shift and go to state 14
    EXP2                           shift and go to state 16
    UNARIO                         shift and go to state 18

state 8

    (2) instrucciones -> instrucciones instruccion .

    not             reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    select          reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    $end            reduce using rule 2 (instrucciones -> instrucciones instruccion .)


state 9

    (19) OPLOGICA -> OPLOGICA and . RELACIONAL
    (21) RELACIONAL -> . RELACIONAL mayor EXP
    (22) RELACIONAL -> . RELACIONAL menor EXP
    (23) RELACIONAL -> . RELACIONAL mayor_igual EXP
    (24) RELACIONAL -> . RELACIONAL menor_igual EXP
    (25) RELACIONAL -> . RELACIONAL igual EXP
    (26) RELACIONAL -> . RELACIONAL diferente1 EXP
    (27) RELACIONAL -> . RELACIONAL diferente2 EXP
    (28) RELACIONAL -> . EXP
    (31) EXP -> . EXP mas EXP1
    (32) EXP -> . EXP menos EXP1
    (33) EXP -> . EXP multiplicacion EXP1
    (34) EXP -> . EXP division EXP1
    (35) EXP -> . EXP1
    (36) EXP1 -> . EXP1 modulo EXP2
    (37) EXP1 -> . EXP1 elevado EXP2
    (38) EXP1 -> . EXP2
    (39) EXP2 -> . para EXP parac
    (40) EXP2 -> . UNARIO EXP
    (41) EXP2 -> . int
    (42) EXP2 -> . decimal
    (43) EXP2 -> . varchar
    (44) EXP2 -> . char
    (45) EXP2 -> . true
    (46) EXP2 -> . false
    (47) EXP2 -> . id
    (48) EXP2 -> . id punto EXP
    (49) UNARIO -> . mas
    (50) UNARIO -> . menos

    para            shift and go to state 17
    int             shift and go to state 19
    decimal         shift and go to state 20
    varchar         shift and go to state 21
    char            shift and go to state 22
    true            shift and go to state 23
    false           shift and go to state 24
    id              shift and go to state 25
    mas             shift and go to state 13
    menos           shift and go to state 15

    RELACIONAL                     shift and go to state 31
    EXP                            shift and go to state 12
    EXP1                           shift and go to state 14
    EXP2                           shift and go to state 16
    UNARIO                         shift and go to state 18

state 10

    (20) OPLOGICA -> OPLOGICA or . RELACIONAL
    (21) RELACIONAL -> . RELACIONAL mayor EXP
    (22) RELACIONAL -> . RELACIONAL menor EXP
    (23) RELACIONAL -> . RELACIONAL mayor_igual EXP
    (24) RELACIONAL -> . RELACIONAL menor_igual EXP
    (25) RELACIONAL -> . RELACIONAL igual EXP
    (26) RELACIONAL -> . RELACIONAL diferente1 EXP
    (27) RELACIONAL -> . RELACIONAL diferente2 EXP
    (28) RELACIONAL -> . EXP
    (31) EXP -> . EXP mas EXP1
    (32) EXP -> . EXP menos EXP1
    (33) EXP -> . EXP multiplicacion EXP1
    (34) EXP -> . EXP division EXP1
    (35) EXP -> . EXP1
    (36) EXP1 -> . EXP1 modulo EXP2
    (37) EXP1 -> . EXP1 elevado EXP2
    (38) EXP1 -> . EXP2
    (39) EXP2 -> . para EXP parac
    (40) EXP2 -> . UNARIO EXP
    (41) EXP2 -> . int
    (42) EXP2 -> . decimal
    (43) EXP2 -> . varchar
    (44) EXP2 -> . char
    (45) EXP2 -> . true
    (46) EXP2 -> . false
    (47) EXP2 -> . id
    (48) EXP2 -> . id punto EXP
    (49) UNARIO -> . mas
    (50) UNARIO -> . menos

    para            shift and go to state 17
    int             shift and go to state 19
    decimal         shift and go to state 20
    varchar         shift and go to state 21
    char            shift and go to state 22
    true            shift and go to state 23
    false           shift and go to state 24
    id              shift and go to state 25
    mas             shift and go to state 13
    menos           shift and go to state 15

    RELACIONAL                     shift and go to state 32
    EXP                            shift and go to state 12
    EXP1                           shift and go to state 14
    EXP2                           shift and go to state 16
    UNARIO                         shift and go to state 18

state 11

    (18) OPLOGICA -> not RELACIONAL .
    (21) RELACIONAL -> RELACIONAL . mayor EXP
    (22) RELACIONAL -> RELACIONAL . menor EXP
    (23) RELACIONAL -> RELACIONAL . mayor_igual EXP
    (24) RELACIONAL -> RELACIONAL . menor_igual EXP
    (25) RELACIONAL -> RELACIONAL . igual EXP
    (26) RELACIONAL -> RELACIONAL . diferente1 EXP
    (27) RELACIONAL -> RELACIONAL . diferente2 EXP

    and             reduce using rule 18 (OPLOGICA -> not RELACIONAL .)
    or              reduce using rule 18 (OPLOGICA -> not RELACIONAL .)
    not             reduce using rule 18 (OPLOGICA -> not RELACIONAL .)
    select          reduce using rule 18 (OPLOGICA -> not RELACIONAL .)
    $end            reduce using rule 18 (OPLOGICA -> not RELACIONAL .)
    mayor           shift and go to state 33
    menor           shift and go to state 34
    mayor_igual     shift and go to state 35
    menor_igual     shift and go to state 36
    igual           shift and go to state 37
    diferente1      shift and go to state 38
    diferente2      shift and go to state 39


state 12

    (28) RELACIONAL -> EXP .
    (31) EXP -> EXP . mas EXP1
    (32) EXP -> EXP . menos EXP1
    (33) EXP -> EXP . multiplicacion EXP1
    (34) EXP -> EXP . division EXP1

    mayor           reduce using rule 28 (RELACIONAL -> EXP .)
    menor           reduce using rule 28 (RELACIONAL -> EXP .)
    mayor_igual     reduce using rule 28 (RELACIONAL -> EXP .)
    menor_igual     reduce using rule 28 (RELACIONAL -> EXP .)
    igual           reduce using rule 28 (RELACIONAL -> EXP .)
    diferente1      reduce using rule 28 (RELACIONAL -> EXP .)
    diferente2      reduce using rule 28 (RELACIONAL -> EXP .)
    and             reduce using rule 28 (RELACIONAL -> EXP .)
    or              reduce using rule 28 (RELACIONAL -> EXP .)
    not             reduce using rule 28 (RELACIONAL -> EXP .)
    select          reduce using rule 28 (RELACIONAL -> EXP .)
    $end            reduce using rule 28 (RELACIONAL -> EXP .)
    mas             shift and go to state 40
    menos           shift and go to state 41
    multiplicacion  shift and go to state 42
    division        shift and go to state 43


state 13

    (49) UNARIO -> mas .

    para            reduce using rule 49 (UNARIO -> mas .)
    int             reduce using rule 49 (UNARIO -> mas .)
    decimal         reduce using rule 49 (UNARIO -> mas .)
    varchar         reduce using rule 49 (UNARIO -> mas .)
    char            reduce using rule 49 (UNARIO -> mas .)
    true            reduce using rule 49 (UNARIO -> mas .)
    false           reduce using rule 49 (UNARIO -> mas .)
    id              reduce using rule 49 (UNARIO -> mas .)
    mas             reduce using rule 49 (UNARIO -> mas .)
    menos           reduce using rule 49 (UNARIO -> mas .)


state 14

    (35) EXP -> EXP1 .
    (36) EXP1 -> EXP1 . modulo EXP2
    (37) EXP1 -> EXP1 . elevado EXP2

  ! shift/reduce conflict for modulo resolved as shift
  ! shift/reduce conflict for elevado resolved as shift
    mas             reduce using rule 35 (EXP -> EXP1 .)
    menos           reduce using rule 35 (EXP -> EXP1 .)
    multiplicacion  reduce using rule 35 (EXP -> EXP1 .)
    division        reduce using rule 35 (EXP -> EXP1 .)
    mayor           reduce using rule 35 (EXP -> EXP1 .)
    menor           reduce using rule 35 (EXP -> EXP1 .)
    mayor_igual     reduce using rule 35 (EXP -> EXP1 .)
    menor_igual     reduce using rule 35 (EXP -> EXP1 .)
    igual           reduce using rule 35 (EXP -> EXP1 .)
    diferente1      reduce using rule 35 (EXP -> EXP1 .)
    diferente2      reduce using rule 35 (EXP -> EXP1 .)
    and             reduce using rule 35 (EXP -> EXP1 .)
    or              reduce using rule 35 (EXP -> EXP1 .)
    not             reduce using rule 35 (EXP -> EXP1 .)
    select          reduce using rule 35 (EXP -> EXP1 .)
    $end            reduce using rule 35 (EXP -> EXP1 .)
    coma            reduce using rule 35 (EXP -> EXP1 .)
    r_from          reduce using rule 35 (EXP -> EXP1 .)
    parac           reduce using rule 35 (EXP -> EXP1 .)
    where           reduce using rule 35 (EXP -> EXP1 .)
    group           reduce using rule 35 (EXP -> EXP1 .)
    having          reduce using rule 35 (EXP -> EXP1 .)
    ptcoma          reduce using rule 35 (EXP -> EXP1 .)
    parc            reduce using rule 35 (EXP -> EXP1 .)
    modulo          shift and go to state 44
    elevado         shift and go to state 45

  ! modulo          [ reduce using rule 35 (EXP -> EXP1 .) ]
  ! elevado         [ reduce using rule 35 (EXP -> EXP1 .) ]


state 15

    (50) UNARIO -> menos .

    para            reduce using rule 50 (UNARIO -> menos .)
    int             reduce using rule 50 (UNARIO -> menos .)
    decimal         reduce using rule 50 (UNARIO -> menos .)
    varchar         reduce using rule 50 (UNARIO -> menos .)
    char            reduce using rule 50 (UNARIO -> menos .)
    true            reduce using rule 50 (UNARIO -> menos .)
    false           reduce using rule 50 (UNARIO -> menos .)
    id              reduce using rule 50 (UNARIO -> menos .)
    mas             reduce using rule 50 (UNARIO -> menos .)
    menos           reduce using rule 50 (UNARIO -> menos .)


state 16

    (38) EXP1 -> EXP2 .

    modulo          reduce using rule 38 (EXP1 -> EXP2 .)
    elevado         reduce using rule 38 (EXP1 -> EXP2 .)
    mas             reduce using rule 38 (EXP1 -> EXP2 .)
    menos           reduce using rule 38 (EXP1 -> EXP2 .)
    multiplicacion  reduce using rule 38 (EXP1 -> EXP2 .)
    division        reduce using rule 38 (EXP1 -> EXP2 .)
    mayor           reduce using rule 38 (EXP1 -> EXP2 .)
    menor           reduce using rule 38 (EXP1 -> EXP2 .)
    mayor_igual     reduce using rule 38 (EXP1 -> EXP2 .)
    menor_igual     reduce using rule 38 (EXP1 -> EXP2 .)
    igual           reduce using rule 38 (EXP1 -> EXP2 .)
    diferente1      reduce using rule 38 (EXP1 -> EXP2 .)
    diferente2      reduce using rule 38 (EXP1 -> EXP2 .)
    and             reduce using rule 38 (EXP1 -> EXP2 .)
    or              reduce using rule 38 (EXP1 -> EXP2 .)
    not             reduce using rule 38 (EXP1 -> EXP2 .)
    select          reduce using rule 38 (EXP1 -> EXP2 .)
    $end            reduce using rule 38 (EXP1 -> EXP2 .)
    coma            reduce using rule 38 (EXP1 -> EXP2 .)
    r_from          reduce using rule 38 (EXP1 -> EXP2 .)
    parac           reduce using rule 38 (EXP1 -> EXP2 .)
    where           reduce using rule 38 (EXP1 -> EXP2 .)
    group           reduce using rule 38 (EXP1 -> EXP2 .)
    having          reduce using rule 38 (EXP1 -> EXP2 .)
    ptcoma          reduce using rule 38 (EXP1 -> EXP2 .)
    parc            reduce using rule 38 (EXP1 -> EXP2 .)


state 17

    (39) EXP2 -> para . EXP parac
    (31) EXP -> . EXP mas EXP1
    (32) EXP -> . EXP menos EXP1
    (33) EXP -> . EXP multiplicacion EXP1
    (34) EXP -> . EXP division EXP1
    (35) EXP -> . EXP1
    (36) EXP1 -> . EXP1 modulo EXP2
    (37) EXP1 -> . EXP1 elevado EXP2
    (38) EXP1 -> . EXP2
    (39) EXP2 -> . para EXP parac
    (40) EXP2 -> . UNARIO EXP
    (41) EXP2 -> . int
    (42) EXP2 -> . decimal
    (43) EXP2 -> . varchar
    (44) EXP2 -> . char
    (45) EXP2 -> . true
    (46) EXP2 -> . false
    (47) EXP2 -> . id
    (48) EXP2 -> . id punto EXP
    (49) UNARIO -> . mas
    (50) UNARIO -> . menos

    para            shift and go to state 17
    int             shift and go to state 19
    decimal         shift and go to state 20
    varchar         shift and go to state 21
    char            shift and go to state 22
    true            shift and go to state 23
    false           shift and go to state 24
    id              shift and go to state 25
    mas             shift and go to state 13
    menos           shift and go to state 15

    EXP                            shift and go to state 46
    EXP1                           shift and go to state 14
    EXP2                           shift and go to state 16
    UNARIO                         shift and go to state 18

state 18

    (40) EXP2 -> UNARIO . EXP
    (31) EXP -> . EXP mas EXP1
    (32) EXP -> . EXP menos EXP1
    (33) EXP -> . EXP multiplicacion EXP1
    (34) EXP -> . EXP division EXP1
    (35) EXP -> . EXP1
    (36) EXP1 -> . EXP1 modulo EXP2
    (37) EXP1 -> . EXP1 elevado EXP2
    (38) EXP1 -> . EXP2
    (39) EXP2 -> . para EXP parac
    (40) EXP2 -> . UNARIO EXP
    (41) EXP2 -> . int
    (42) EXP2 -> . decimal
    (43) EXP2 -> . varchar
    (44) EXP2 -> . char
    (45) EXP2 -> . true
    (46) EXP2 -> . false
    (47) EXP2 -> . id
    (48) EXP2 -> . id punto EXP
    (49) UNARIO -> . mas
    (50) UNARIO -> . menos

    para            shift and go to state 17
    int             shift and go to state 19
    decimal         shift and go to state 20
    varchar         shift and go to state 21
    char            shift and go to state 22
    true            shift and go to state 23
    false           shift and go to state 24
    id              shift and go to state 25
    mas             shift and go to state 13
    menos           shift and go to state 15

    UNARIO                         shift and go to state 18
    EXP                            shift and go to state 47
    EXP1                           shift and go to state 14
    EXP2                           shift and go to state 16

state 19

    (41) EXP2 -> int .

    modulo          reduce using rule 41 (EXP2 -> int .)
    elevado         reduce using rule 41 (EXP2 -> int .)
    mas             reduce using rule 41 (EXP2 -> int .)
    menos           reduce using rule 41 (EXP2 -> int .)
    multiplicacion  reduce using rule 41 (EXP2 -> int .)
    division        reduce using rule 41 (EXP2 -> int .)
    mayor           reduce using rule 41 (EXP2 -> int .)
    menor           reduce using rule 41 (EXP2 -> int .)
    mayor_igual     reduce using rule 41 (EXP2 -> int .)
    menor_igual     reduce using rule 41 (EXP2 -> int .)
    igual           reduce using rule 41 (EXP2 -> int .)
    diferente1      reduce using rule 41 (EXP2 -> int .)
    diferente2      reduce using rule 41 (EXP2 -> int .)
    and             reduce using rule 41 (EXP2 -> int .)
    or              reduce using rule 41 (EXP2 -> int .)
    not             reduce using rule 41 (EXP2 -> int .)
    select          reduce using rule 41 (EXP2 -> int .)
    $end            reduce using rule 41 (EXP2 -> int .)
    coma            reduce using rule 41 (EXP2 -> int .)
    r_from          reduce using rule 41 (EXP2 -> int .)
    parac           reduce using rule 41 (EXP2 -> int .)
    where           reduce using rule 41 (EXP2 -> int .)
    group           reduce using rule 41 (EXP2 -> int .)
    having          reduce using rule 41 (EXP2 -> int .)
    ptcoma          reduce using rule 41 (EXP2 -> int .)
    parc            reduce using rule 41 (EXP2 -> int .)


state 20

    (42) EXP2 -> decimal .

    modulo          reduce using rule 42 (EXP2 -> decimal .)
    elevado         reduce using rule 42 (EXP2 -> decimal .)
    mas             reduce using rule 42 (EXP2 -> decimal .)
    menos           reduce using rule 42 (EXP2 -> decimal .)
    multiplicacion  reduce using rule 42 (EXP2 -> decimal .)
    division        reduce using rule 42 (EXP2 -> decimal .)
    mayor           reduce using rule 42 (EXP2 -> decimal .)
    menor           reduce using rule 42 (EXP2 -> decimal .)
    mayor_igual     reduce using rule 42 (EXP2 -> decimal .)
    menor_igual     reduce using rule 42 (EXP2 -> decimal .)
    igual           reduce using rule 42 (EXP2 -> decimal .)
    diferente1      reduce using rule 42 (EXP2 -> decimal .)
    diferente2      reduce using rule 42 (EXP2 -> decimal .)
    and             reduce using rule 42 (EXP2 -> decimal .)
    or              reduce using rule 42 (EXP2 -> decimal .)
    not             reduce using rule 42 (EXP2 -> decimal .)
    select          reduce using rule 42 (EXP2 -> decimal .)
    $end            reduce using rule 42 (EXP2 -> decimal .)
    coma            reduce using rule 42 (EXP2 -> decimal .)
    r_from          reduce using rule 42 (EXP2 -> decimal .)
    parac           reduce using rule 42 (EXP2 -> decimal .)
    where           reduce using rule 42 (EXP2 -> decimal .)
    group           reduce using rule 42 (EXP2 -> decimal .)
    having          reduce using rule 42 (EXP2 -> decimal .)
    ptcoma          reduce using rule 42 (EXP2 -> decimal .)
    parc            reduce using rule 42 (EXP2 -> decimal .)


state 21

    (43) EXP2 -> varchar .

    modulo          reduce using rule 43 (EXP2 -> varchar .)
    elevado         reduce using rule 43 (EXP2 -> varchar .)
    mas             reduce using rule 43 (EXP2 -> varchar .)
    menos           reduce using rule 43 (EXP2 -> varchar .)
    multiplicacion  reduce using rule 43 (EXP2 -> varchar .)
    division        reduce using rule 43 (EXP2 -> varchar .)
    mayor           reduce using rule 43 (EXP2 -> varchar .)
    menor           reduce using rule 43 (EXP2 -> varchar .)
    mayor_igual     reduce using rule 43 (EXP2 -> varchar .)
    menor_igual     reduce using rule 43 (EXP2 -> varchar .)
    igual           reduce using rule 43 (EXP2 -> varchar .)
    diferente1      reduce using rule 43 (EXP2 -> varchar .)
    diferente2      reduce using rule 43 (EXP2 -> varchar .)
    and             reduce using rule 43 (EXP2 -> varchar .)
    or              reduce using rule 43 (EXP2 -> varchar .)
    not             reduce using rule 43 (EXP2 -> varchar .)
    select          reduce using rule 43 (EXP2 -> varchar .)
    $end            reduce using rule 43 (EXP2 -> varchar .)
    coma            reduce using rule 43 (EXP2 -> varchar .)
    r_from          reduce using rule 43 (EXP2 -> varchar .)
    parac           reduce using rule 43 (EXP2 -> varchar .)
    where           reduce using rule 43 (EXP2 -> varchar .)
    group           reduce using rule 43 (EXP2 -> varchar .)
    having          reduce using rule 43 (EXP2 -> varchar .)
    ptcoma          reduce using rule 43 (EXP2 -> varchar .)
    parc            reduce using rule 43 (EXP2 -> varchar .)


state 22

    (44) EXP2 -> char .

    modulo          reduce using rule 44 (EXP2 -> char .)
    elevado         reduce using rule 44 (EXP2 -> char .)
    mas             reduce using rule 44 (EXP2 -> char .)
    menos           reduce using rule 44 (EXP2 -> char .)
    multiplicacion  reduce using rule 44 (EXP2 -> char .)
    division        reduce using rule 44 (EXP2 -> char .)
    mayor           reduce using rule 44 (EXP2 -> char .)
    menor           reduce using rule 44 (EXP2 -> char .)
    mayor_igual     reduce using rule 44 (EXP2 -> char .)
    menor_igual     reduce using rule 44 (EXP2 -> char .)
    igual           reduce using rule 44 (EXP2 -> char .)
    diferente1      reduce using rule 44 (EXP2 -> char .)
    diferente2      reduce using rule 44 (EXP2 -> char .)
    and             reduce using rule 44 (EXP2 -> char .)
    or              reduce using rule 44 (EXP2 -> char .)
    not             reduce using rule 44 (EXP2 -> char .)
    select          reduce using rule 44 (EXP2 -> char .)
    $end            reduce using rule 44 (EXP2 -> char .)
    coma            reduce using rule 44 (EXP2 -> char .)
    r_from          reduce using rule 44 (EXP2 -> char .)
    parac           reduce using rule 44 (EXP2 -> char .)
    where           reduce using rule 44 (EXP2 -> char .)
    group           reduce using rule 44 (EXP2 -> char .)
    having          reduce using rule 44 (EXP2 -> char .)
    ptcoma          reduce using rule 44 (EXP2 -> char .)
    parc            reduce using rule 44 (EXP2 -> char .)


state 23

    (45) EXP2 -> true .
